--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+iced = { version = "0.13.1", features = ["canvas", "tokio"] }
 plotters = "0.3.7"
-polars = { version = "0.46.0", features = ["csv", "lazy", "streaming"] }
+plotters-iced = "0.11.0"
+rfd = "0.15.3"
